Merge getRequests overridden functions